AA-2001-12-21-0: Feature    added sge_ca script
                            RAND_load_file
                            sec_setup_path path changes

JG-2001-12-21-0: Enhancem.  Eliminate insure compile warnings

AA-2001-12-20-1: Feature:   Security: 
                            - commdcntl skips sge_security_init()
                            - unpack free of elem fix
                            - removal of obsolete setup routines in seclib

EB-2001-12-20-0: Bugfix:    Hold tid list of job submission dialog honours
                            tid range specification.
                 Issue:     None (Fix of Enhancem.: EB-2001-12-12-0) 

CR-2001-12-20-0: Testsuite: moved job start procedures from job_state_handling test
                            to the global sge_procedurs.tcl file.
                            (submit_waitjob_job(), submit_time_job(), submit_error_job())

EB-2001-12-19-0: Enhancem.: qmaster writes heartbeat-file during job deletion

CR-2001-12-19-1: Testsuite: new test: job_state_handling
                               - testing job states for array and "normal" jobs
                                 (hold, pending, running, finished, error, timehold
                                  jobhold, suspend is tested in qmod test)
                               - testing max_aj_instances
                               - testing max_aj_tasks
                            new parser procedure: parse_qstat_j() (parse qstat -j)
                            new procedure:  get_qstat_j_info() (get qstat -j information)
                            new procedure:  get_job_state() (parse qstat -f for job/array
                                                             states)
                 Bugfix:    unlock testsuite after fault tcl command code           
                               
CR-2001-12-19-0: Bugfix:    added missing ":" for qstat -j output for "job-array tasks"

AA-2001-12-19-0: Bugfix:    scrollbar anomalie in cluster config, made scrollbars static