@@ -70,6 +70,10 @@ struct read_object_args *args,
 int *tag,
 int fields[]  
 ) {
+#ifdef __INSIGHT__
+/* JG: NULL is OK for fields */
+_Insight_set_option("suppress", "PARM_NULL");
+#endif
    int ret;
    stringT fullname;
    FILE *fp;
@@ -166,6 +170,9 @@ int fields[]
 
    DEXIT;
    return ep;
+#ifdef __INSIGHT__
+_Insight_set_option("unsuppress", "PARM_NULL");
+#endif
 }
 
 
