@@ -61,6 +61,10 @@ int flag,
 int *tag,
 int fields[] 
 ) {
+#ifdef __INSIGHT__
+/* JG: NULL is OK for fields */
+_Insight_set_option("suppress", "PARM_NULL");
+#endif
    lListElem *ep;
    struct read_object_args args = { CAL_Type, "calendar", read_cal_work };
    int intern_tag = 0;
@@ -71,6 +75,9 @@ int fields[]
   
    DEXIT;
    return ep;
+#ifdef __INSIGHT__
+_Insight_set_option("unsuppress", "PARM_NULL");
+#endif
 }
 
 
@@ -93,6 +100,10 @@ int flag,
 int *tag,
 int parsing_type 
 ) {
+#ifdef __INSIGHT__
+/* JG: NULL is OK for fields */
+_Insight_set_option("suppress", "PARM_NULL");
+#endif
    DENTER(TOP_LAYER, "read_cal_work");
 
    /* --------- CAL_name */
@@ -115,6 +126,9 @@ int parsing_type
 
    DEXIT;
    return 0;
+#ifdef __INSIGHT__
+_Insight_set_option("unsuppress", "PARM_NULL");
+#endif
 }
 
 
