@@ -253,6 +253,10 @@ int user,
 int *tag,
 int parsing_type 
 ) {
+#ifdef __INSIGHT__
+/* JG: NULL is OK for fields */
+_Insight_set_option("suppress", "PARM_NULL");
+#endif
    char *rest;
    const char *name;
    u_long32 job_number;
@@ -431,6 +435,9 @@ int parsing_type
 
    DEXIT;
    return 0;
+#ifdef __INSIGHT__
+_Insight_set_option("unsuppress", "PARM_NULL");
+#endif
 }
 
 void
