@@ -339,6 +339,13 @@ const char *sge_get_default_cell(void)
  * get_alias_path
  *-----------------------------------------------------------------------*/
 char *get_alias_path(void) {
+/* JG: suppress READ_DANGLING. sge_root comes from a getenv() call.
+ *     this should be handled properly in underlying function, e.g. by
+ *     strdupping the value returned by getenv().
+ */
+#ifdef __INSIGHT__
+_Insight_set_option("suppress", "READ_DANGLING");
+#endif
    const char *sge_root, *sge_cell;
    char *cp;
    int len;
@@ -363,4 +370,7 @@ char *get_alias_path(void) {
    sprintf(cp, "%s/%s/%s/%s", sge_root, sge_cell, COMMON_DIR, ALIAS_FILE);
    DEXIT;
    return cp;
+#ifdef __INSIGHT__
+_Insight_set_option("unsuppress", "READ_DANGLING");
+#endif
 }
